# crimson-eagle-notes-app

./: README.md  package-lock.json  package.json
.github/workflows/: main.yml
offline/: .eslintignore  README.md  package-lock.json  package.json  tailwind.config.js
offline/src/: app.css  app.d.ts  app.html
offline/src-tauri/: Cargo.toml  tauri.conf.json
offline/src-tauri/src/: lib.rs  main.rs
offline/src-tauri/src/commands/: md_parser.rs  mod.rs  note_controller.rs
offline/src-tauri/src/models/: error.rs  mod.rs  note.rs
offline/src-tauri/tests/: md_parser_test.rs
offline/src/components/: Editor.svelte
offline/src/lib/: AppBar.svelte  Header.svelte  InfoDrawer.svelte  LeftSidebar.svelte  Login.svelte  Note.svelte  RightSidebar.svelte  Spinner.svelte  Tiptap.svelte  loader.ts  store.ts
offline/src/lib/stores/: note.ts  search.ts
offline/src/routes/: +layout.svelte  +layout.ts  +page.svelte
offline/src/routes/add/: +page.svelte
offline/src/routes/auth/: +page.svelte
offline/src/routes/delete/: +page.svelte
offline/src/routes/edit/[id]/: +page.svelte
offline/src/routes/editor/: +page.svelte
offline/src/routes/favorites/: +page.svelte
offline/src/routes/profile/: +page.svelte
offline/src/routes/settings/: +page.svelte
offline/src/types/: note.type.ts
